
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int stderr ;

int re_connt(int sock,int type)
{
 if(sock==-1)
 {
  if(type)
  {
   fprintf(stderr," [-] Connect Failed.\n\n");
   exit(-1);
  }
  else return(-1);
 }
}
